Just another update

--- a/Python podstawowy/7. Jakość kodu i obsługa błędów.md
+++ b/Python podstawowy/7. Jakość kodu i obsługa błędów.md
@@ -139,9 +139,10 @@ Linki do Stacka często pojawiają się wysoko w wynikach wyszukiwania:
 
 Jedną z zalet Stack Overflow jest system punktacji zarówno pytań jak i odpowiedzi, który zwiększa widoczność najbardziej wartościowych treści.
 
-**Stack Overflow — podsumowanie:**
+**Stack Overflow – podsumowanie:**
 - Podczas programowania często napotykamy problemy, które zostały już rozwiązane przez kogoś innego
 - Wiele z nich zostało opisanych na Stack Overflow - serwisie dla programistów, którego celem jest opisywanie i rozwiązywanie tego typu problemów 
+
 ---
 ---
 ---
@@ -212,10 +213,11 @@ Wykonując skrypt należy wybrać opcję *Debug* zamiast *Run*. Kiedy program do
 - przejść do kolejnej linijki w ramach scope'u, w którym się znajdujemy (w PyCharmie nazywa się to `Step Over`)
 - wejść do środka funkcji, której wywołanie znajduje się w aktualnej linii (w PyCharmie nazywa się to `Step Into`)
 
-**Debugowanie — podsumowanie:**
+**Debugowanie – podsumowanie:**
 - Proces lokalizacji oraz eliminacji błędów w kodzie nazywa się *debugowaniem*
-- Jednym ze sposób debugowania jest analiza *tracebacku* czyli komunikatu, który pojawia się w terminalu po wystąpieniu błędu
+- Jednym ze sposób debugowania jest analiza *tracebacku* czyli komunikatu, który pojawia się na outpucie po wystąpieniu błędu
 - Przydatnym narzędziem podczas szukania błędów jest debuger, który pozwala zatrzymać wykonywanie programu w dowolnym miejscu
+
 ---
 ---
 ---
@@ -458,11 +460,12 @@ def check_if_even(list_):
 check_if_even(even_numbers)
 ```
 
-**Wyjątki — podsumowanie:**
+**Wyjątki – podsumowanie:**
 - Różne rodzaje błędów wykonywania programu zwracają różne wyjątki. Zwrócenie wyjątku przerywa działanie programu
 - Aby pojawienie się błędu nie przerwało pracy programu używamy konstrukcji `try-except`, która pozwala przechwycić dowolny wyjątek
 - Możemy podnieść wyjątek za pomocą słowa kluczowego `raise`
-- Aby upewnić się, że pewien warunek jest spełniony używamy słowa kluczowego `assert`. Niespełnienie warunku spowoduje wyrzucenie błędu
+- Aby upewnić się, że pewien warunek jest spełniony, używamy słowa kluczowego `assert`. Niespełnienie warunku spowoduje wyrzucenie błędu
+
 ---
 ---
 ---
