--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -125,6 +125,7 @@ print(zombie.n_infected)
 - W Pythonie istnieją klasy wbudowane (np. *str*, *int*, *float*, ...) ale możemy tworzyć również własne. Wówczas ich nazwa powinna zaczynać się od wielkiej litery
 - Klasy prawie zawsze posiadają metodę inicjalizacyjną, która zawiera zestaw instrukcji jakie zostają wykonane po utworzeniu obiektu. Przede wszystkim są tam przypisywane wartości do atrybutów
 - Aby odwołać się do atrybutu obiektu poza klasą należy użyć zapisu `<object_name>.<attribute_name>`
+
 ---
 ---
 ---
@@ -199,10 +200,11 @@ print(zombie.y)
 # 2
 ```
 
-**Metody — podsumowanie:**
+**Metody – podsumowanie:**
 - Funkcje wchodzące w skład klasy nazywamy metodami. Wykonują one pewne operacje, zwykle odnosząc się do instancji klasy
 - Odwołując się do atrybutów lub innych metod należy używać słowa `self`
 - Aby odwołać się do metody obiektu poza klasą należy użyć zapisu `<object_name>.<method_name>`
+
 ---
 ---
 ---
@@ -283,8 +285,8 @@ print(human.n_killed)
 # 0
 ```
 
-**`staticmethod`, `classmethod` — podsumowanie:**
-- Jeżeli metoda nie odnosi się do *self* powinna być oznaczona jako metoda statyczna. Odwołujemy się do niej tak samo jak do zwykłej metody
+**`staticmethod`, `classmethod` – podsumowanie:**
+- Jeżeli metoda nie odnosi się do *self* powinna być oznaczona jako metoda statyczna. Odwołujemy się do niej tak samo jak do zwykłej metody, ale dodajemy nad jej definicją dekorator `@staticmethod`
 - Jeżeli metoda odnosi się do klasy, np. w celu utworzenia jej instancji, jest to *classmethod*. Jej pierwszym parametrem powinno być `cls`
 
 
@@ -344,9 +346,10 @@ print(c.fuel_amount)
 # 70
 ```
 
-**Dziedziczenie — podsumowanie:**
-- Jeśli tworzymy kilka klas, które współdzielą część atrybutów albo metod możemy utworzyć klasę bazową oraz jedną lub więcej klasy dziedziczące po niej
-- Klasy dziedziczące przejmują wszystkie atrybuty oraz metody klasy bazowej a także mogą posiadać własne
+**Dziedziczenie – podsumowanie:**
+- Jeśli tworzymy kilka klas, które współdzielą część atrybutów albo metod, możemy utworzyć klasę bazową oraz jedną lub więcej klas dziedziczących po niej
+- Klasy dziedziczące przejmują wszystkie atrybuty oraz metody klasy bazowej, a także mogą posiadać własne
+
 ---
 ---
 ---
@@ -423,10 +426,10 @@ print(my_list)
 # [3, 2, 5, 3]
 ```
 
-**Stringifikacja i reprezentacja — podsumowanie:**
-- Aby zmodyfikować domyślny sposób w jaki reprezentowane są obiekty możemy dodać do klasy metody specjalne  \_\_repr()__ oraz \_\_str()\_\_
+**Stringifikacja i reprezentacja – podsumowanie:**
+- Aby zmodyfikować domyślny sposób w jaki reprezentowane są obiekty możemy dodać do klasy metody specjalne  `__repr()__` oraz `__str()__`
 - Reprezentacja jest widoczna podczas odwołania się do obiektu w konsoli. Przedstawia ona zawartość obiektu w sposób schematyczny, często zawierając kod, który mógłby być użyty do stworzenia obiektu. Powinna być zrozumiała dla programisty
-- Stringifikacja jest widoczna podczas printowania obiektu lub rzutowania go na string. Powinna przedstawiać zawartość obiektu w sposób przyjazny dla odbiorcy koncowego
+- Stringifikacja jest widoczna podczas printowania obiektu lub rzutowania go na string. Powinna przedstawiać zawartość obiektu w sposób przyjazny dla odbiorcy końcowego
 
 
 ---
