Just another update

--- a/Python podstawowy/3. Struktury danych.md
+++ b/Python podstawowy/3. Struktury danych.md
@@ -244,7 +244,7 @@ Set może składać się tylko z obiektów hashowalnych. Więcej informacji o ha
 - `set` to struktura danych przechowująca zbiór unikalnych wartości
 - Kolejność elementów w zbiorze nie ma znaczenia. Po jej zamianie mamy do czynienia z dokładnie tym samym zbiorem
 - `set` może zostać użyty do wyznaczenia unikalnych elementów w liście/tupli
-- `set` nie może przechowywać obiektów hashowalnych
+- `set` może przechowywać wyłącznie obiekty hashowalne
 
 ---
 ---
