Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -5,14 +5,21 @@
 ---
 ---
 &nbsp;
-### 2.2 Nawiązanie połączenia
+### 2.2 PostgreSQL + Python
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 2.3 Generowanie i egzekucja zapytań SQL w Pythonie
+### 2.3 SQLAlchemy
+...
+
+---
+---
+---
+&nbsp;
+### 2.4 MongoDB
 ...
 
 ---
