--- a/Python średnio zaawansowany/3. Protokół HTTP.md
+++ b/Python średnio zaawansowany/3. Protokół HTTP.md
@@ -1,18 +1,25 @@
-### 3.1 Podstawowe pojęcia
+### 3.1 HTML
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 3.2 Web scraping
+### 3.2 Podstawy działania protokołu HTTP
 ...
 
 ---
 ---
 ---
 &nbsp;
-### 3.3 REST API
+### 3.3 Web scraping
+...
+
+---
+---
+---
+&nbsp;
+### 3.4 JSON API
 ...
 
 ---
