Just another update

--- a/Python średnio zaawansowany/1. Data i czas.md
+++ b/Python średnio zaawansowany/1. Data i czas.md
@@ -1,4 +1,138 @@
 ### 1.1 Typy danych
+Do operacji na dacie i czasie służy w Pythonie biblioteka `datetime`. Możemy zaimportować z niej następujące klasy:
+- `datetime.date`
+- `datetime.time`
+- `datetime.datetime`
+- `datetime.timedelta`
+
+```python
+from datetime import date, time, datetime, timedelta
+
+date  # reprezentuje datę
+time  # reprezentuje godzinę
+datetime  # reprezentuje timestamp (połączenie daty i godziny)
+timedelta  # reprezentuje ilość (różnicę) czasu
+```
+
+
+## `datetime.date`
+
+Stworzenie obiektu reprezentującego dzień dzisiejszy:
+```python
+date.today()
+```
+
+
+Stworzenie dowolnego obiektu typu `datetime.date`:
+```python
+my_date = date(year=2021, month=5, day=14)  # date(2021, 5, 14)
+```
+
+
+Wyciągnięcie z obiektu poszczególnych elementów składowych daty:
+```python
+print(my_date.year)
+print(my_date.month)
+print(my_date.day)
+
+# 2021
+# 5
+# 14
+```
+
+
+## `datetime.time`
+
+Stworzenie dowolnego obiektu typu `datetime.time`:
+```python
+time(hour=12, minute=8, second=3, microsecond=12243)  # time(12, 8, 3, 12243)
+```
+
+```python
+my_time = time(12, 8, 3, 12243)
+```
+
+Wyciągnięcie z obiektu poszczególnych elementów składowych godziny:
+```python
+print(my_time.hour)
+print(my_time.minute)
+print(my_time.second)
+print(my_time.microsecond)
+
+# 12
+# 8
+# 3
+# 12243
+```
+
+## `datetime.datetime`
+
+Stworzenie obiektu reprezentującego obecny *timestamp*:
+```python
+datetime.now()
+```
+
+
+Możemy wyciągnąć z niego samą datę:
+```python
+datetime.now().date()
+```
+
+Aby stworzyć dowolny *timestamp*, piszemy:
+```python
+my_datetime = datetime(2019, 5, 3, 12, 14, 45, 2543)
+```
+
+Podając kolejno: rok, miesiąc, dzień, godzinę, minutę, sekundę i mikrosekundę. Następnie możemy wyciągnąć poszczególne atrybuty obiektu:
+
+```python
+print(my_datetime.year)
+print(my_datetime.month)
+print(my_datetime.day)
+print(my_datetime.hour)
+print(my_datetime.minute)
+print(my_datetime.second)
+print(my_datetime.microsecond)
+
+# 2019
+# 5
+# 3
+# 12
+# 14
+# 45
+# 2543
+```
+
+
+### `datetime.timedelta`
+
+Możemy odejmować instancje powyższych klas i w ten sposób dostać obiekt typu `datetime.timedelta`:
+```python
+dt1 = datetime.now()
+dt2 = datetime(2012, 4, 2, 12, 19, 54)
+
+dt1 - dt2
+```
+
+Aby stworzyć dowolny obiekt reprezentujący ilość (różnicę) czasu piszemy:
+```python
+timedelta(10, 12, 12325)
+```
+
+Podając kolejno: dni, sekundy, mikrosekundy. Następnie możemy te informacje wydobyć z obiektu:
+
+```python
+td = timedelta(10, 12, 12325)
+
+print(td.days)
+print(td.seconds)
+print(td.microseconds)
+
+# 10
+# 12
+# 12325
+```
+
 
 ---
 ---
