Just another update

--- a/Python średnio zaawansowany/1. Data i czas.md
+++ b/Python średnio zaawansowany/1. Data i czas.md
@@ -15,7 +15,7 @@ timedelta  # reprezentuje ilość (różnicę) czasu
 ```
 
 
-## `datetime.date`
+### `datetime.date`
 
 Stworzenie obiektu reprezentującego dzień dzisiejszy:
 ```python
@@ -41,7 +41,7 @@ print(my_date.day)
 ```
 
 
-## `datetime.time`
+### `datetime.time`
 
 Stworzenie dowolnego obiektu typu `datetime.time`:
 ```python
@@ -65,7 +65,7 @@ print(my_time.microsecond)
 # 12243
 ```
 
-## `datetime.datetime`
+### `datetime.datetime`
 
 Stworzenie obiektu reprezentującego obecny *timestamp*:
 ```python
@@ -139,9 +139,9 @@ print(td.microseconds)
 ---
 &nbsp;
 ### 1.2 Zamiana daty na tekst i tekstu na datę
-## Data -> tekst
+### Data -> tekst
 
-Na obiektach typu *date*, *time* oraz *datetime* możemy wywołać metodę `strftime()`, która służy do zamiany obiektu na postać tekstową (typ `str`). Do metody tej musimy przekazać również format tworzonego stringa. Poszczególne elementy składowe daty oraz czasu oznaczamy wg poniższej notacji (wybrane przykłady):
+Na obiektach typu *date*, *time* oraz *datetime* możemy wywołać metodę `strftime()`, która służy do zamiany obiektu na postać tekstową (typ `str`). Do metody tej musimy przekazać format tworzonego stringa. Poszczególne elementy składowe daty oraz czasu oznaczamy wg poniższej notacji (wybrane przykłady):
 ```
 %Y - rok (yyyy)
 %m - miesiąc (mm)
@@ -153,6 +153,7 @@ Na obiektach typu *date*, *time* oraz *datetime* możemy wywołać metodę `strf
 
 ```python
 my_date = date(year=2021, month=5, day=14)
+
 my_date.strftime("%Y-%m-%d")
 
 # "2021-05-14"
@@ -172,7 +173,7 @@ datetime.strftime(my_datetime, "%Y-%m-%d %H:%M:%S")
 # "2019-05-03 12:14:45"
 ```
 
-## Tekst -> data
+### Tekst -> data
 
 Aby dokonać zamiany w drugą stronę, należy wywołać funkcję `strptime()` z biblioteki `datetime`:
 ```python
