Just another update

--- a/Python średnio zaawansowany/1. Data i czas.md
+++ b/Python średnio zaawansowany/1. Data i czas.md
@@ -15,7 +15,7 @@ timedelta  # reprezentuje ilość (różnicę) czasu
 ```
 
 
-### `datetime.date`
+# `datetime.date`
 
 Stworzenie obiektu reprezentującego dzień dzisiejszy:
 ```python
@@ -41,7 +41,7 @@ print(my_date.day)
 ```
 
 
-### `datetime.time`
+## `datetime.time`
 
 Stworzenie dowolnego obiektu typu `datetime.time`:
 ```python
@@ -104,7 +104,7 @@ print(my_datetime.microsecond)
 ```
 
 
-### `datetime.timedelta`
+#### 1.1.1 `datetime.timedelta`
 
 Możemy odejmować instancje powyższych klas i w ten sposób dostać obiekt typu `datetime.timedelta`:
 ```python
@@ -139,7 +139,7 @@ print(td.microseconds)
 ---
 &nbsp;
 ### 1.2 Zamiana daty na tekst i tekstu na datę
-### Data -> tekst
+#### 1.2.1 Data -> tekst
 
 Na obiektach typu *date*, *time* oraz *datetime* możemy wywołać metodę `strftime()`, która służy do zamiany obiektu na postać tekstową (typ `str`). Do metody tej musimy przekazać format tworzonego stringa. Poszczególne elementy składowe daty oraz czasu oznaczamy wg poniższej notacji (wybrane przykłady):
 ```
@@ -173,7 +173,7 @@ datetime.strftime(my_datetime, "%Y-%m-%d %H:%M:%S")
 # "2019-05-03 12:14:45"
 ```
 
-### Tekst -> data
+#### 1.2.2 Tekst -> data
 
 Aby dokonać zamiany w drugą stronę, należy wywołać funkcję `strptime()` z biblioteki `datetime`:
 ```python
