Just another update

--- a/Python średnio zaawansowany/1. Data i czas.md
+++ b/Python średnio zaawansowany/1. Data i czas.md
@@ -173,7 +173,7 @@ datetime.strftime(my_datetime, "%Y-%m-%d %H:%M:%S")
 # "2019-05-03 12:14:45"
 ```
 
-### Tekst -> data
+#### 1.2.2 Tekst -> data
 
 Aby dokonać zamiany w drugą stronę, należy wywołać funkcję `strptime()` z biblioteki `datetime`:
 ```python
