Just another update

--- a/Python średnio zaawansowany/1. Data i czas.md
+++ b/Python średnio zaawansowany/1. Data i czas.md
@@ -188,7 +188,56 @@ Przekazujemy do niej stringa reprezentującego datę, czas lub *timestamp* oraz 
 ---
 &nbsp;
 ### 1.3 Strefy czasowe
-...
+Do operacji na czasie z uwzględnieniem stref czasowych używamy biblioteki `zoneinfo`. 
+
+```python
+import zoneinfo
+from zoneinfo import ZoneInfo
+```
+
+Listę (set) wszystkich dostępnych stref czasowych możemy otrzymać w następujący sposób:
+```python
+zoneinfo.available_timezones()
+
+# {'Africa/Abidjan',
+#  'Africa/Accra',
+#  ...
+```
+
+Aby stworzyć obiekt reprezentujący strefę czasową wykorzystujemy klasę `ZoneInfo`:
+
+```python
+ZoneInfo('UTC')
+# zoneinfo.ZoneInfo(key='UTC')
+
+ZoneInfo('Europe/Warsaw')
+# zoneinfo.ZoneInfo(key='Europe/Warsaw')
+```
+
+
+Strefy czasowej możemy użyć m.in. podczas tworzenia obiektu typu `datetime.datetime`. Tak to wygląda dla funkcji `datetime.now()`. Jest to obecny czas w strefie "UTC":
+
+```python
+now_utc = datetime.now(ZoneInfo('UTC'))
+```
+
+Teraz stworzymy obiekt `datetime.datetime` reprezentujący pewien *timestamp* w strefie "US/Central":
+```python
+us_central_time = datetime(2018, 11, 14, 14, 15, 20,  tzinfo=ZoneInfo("US/Central"))
+
+us_central_time
+# datetime.datetime(2018, 11, 14, 14, 15, 20, tzinfo=zoneinfo.ZoneInfo(key='US/Central'))
+```
+
+Następnie sprawdzimy jaki czas był wtedy w innej strefie:
+
+```python
+us_central_time.astimezone(ZoneInfo("Europe/Warsaw"))
+# datetime.datetime(2018, 11, 14, 21, 15, 20, tzinfo=zoneinfo.ZoneInfo(key='Europe/Warsaw'))
+```
+
+Różnica czasu wynosiła 7 godzin.
+
 
 ---
 ---
