Just another update

--- a/Python średnio zaawansowany/1. Data i czas.md
+++ b/Python średnio zaawansowany/1. Data i czas.md
@@ -244,7 +244,17 @@ Różnica czasu wynosiła 7 godzin.
 ---
 &nbsp;
 ### 1.4 Dni tygodnia
-...
+Aby sprawdzić jaki dzień tygodnia był (będzie) danego dnia, możemy odwołać się do metody `weekday()` na obiekcie typu `datetime.date` lub `datetime.datetime`:
+
+```python
+my_date = date(2021, 8, 12)
+my_date.weekday()
+
+# 3
+```
+
+Zwracany wynik jest liczbowy. 0 oznacza poniedziałek, a 6 - niedzielę.
+
 
 ---
 ---
