Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -1,26 +1,58 @@
 ### 2.1 Wstęp do baz danych i podstawy SQL
-...
+## Czym jest baza danych?
+Relacyjna baza danych to model przechowywania danych, w którym dane te zorganizowane są w tabelach (zwanych również relacjami). Tabele posiadają wiersze i kolumny. Wiersze reprezentują rekordy (obserwacje) przechowywane w bazie, a kolumny odnoszą się do ich cech (atrybutów).
 
+W praktyce można myśleć o bazie danych jak o zbiorze tabel. Aby dostać się do pojedynczej informacji należy określić nazwę tabeli, nazwę kolumny oraz tzw. klucz główny.
+
+![[Pasted image 20231107175529.png]]
+
+
+**Structured Query Language - ustrukturyzowany język zapytań**
+
+Do wykonywania operacji na relacyjnej bazie danych służy język SQL. Kod SQLa to tak zwane zapytania (*queries*). Różne typy zapytań pozwalają wykonać różne operacje:
+
+- CREATE - do tworzenia tabeli
+- INSERT - do tworzenia nowych wierszy
+- SELECT - do wyciągania danych z tabeli
+- UPDATE - do edycji istniejących danych
+- DELETE - do usuwania danych
+- DROP - do usuwania tabel / baz danych
+
+
+## **CREATE**
+
+To zapytanie służy do tworzenia tabel. Poniższy kod posłuży do stworzenia tabeli przechowującej informacje o samochodach.
+
+``` SQL
+CREATE TABLE cars (
+    id          SMALLINT,    
+    brand       VARCHAR(20), 
+    price       NUMERIC,     
+    fuel_type   TEXT,      
+    mileage     NUMERIC,
+    is_new      BOOLEAN,  
+    prod_date   DATE 
+);
+```
+
+Jego kluczowym elementem jest zdefiniowanie poszczególnych kolumn poprzez podanie ich nazwy oraz typu danych.
 ---
 ---
 ---
 &nbsp;
 ### 2.2 PostgreSQL + Python
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 2.3 SQLAlchemy
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 2.4 MongoDB
-...
 
 ---
 ---
