Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -1,5 +1,5 @@
 ### 2.1 Wstęp do baz danych i podstawy SQL
-## Czym jest baza danych?
+#### 2.1.1 Czym jest baza danych?
 Relacyjna baza danych to model przechowywania danych, w którym dane te zorganizowane są w tabelach (zwanych również relacjami). Tabele posiadają wiersze i kolumny. Wiersze reprezentują rekordy (obserwacje) przechowywane w bazie, a kolumny odnoszą się do ich cech (atrybutów).
 
 W praktyce można myśleć o bazie danych jak o zbiorze tabel. Aby dostać się do pojedynczej informacji należy określić nazwę tabeli, nazwę kolumny oraz tzw. klucz główny.
@@ -19,7 +19,7 @@ Do wykonywania operacji na relacyjnej bazie danych służy język SQL. Kod SQLa 
 - DROP - do usuwania tabel / baz danych
 
 
-## **CREATE**
+#### **CREATE**
 
 To zapytanie służy do tworzenia tabel. Poniższy kod posłuży do stworzenia tabeli przechowującej informacje o samochodach.
 
