Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -4,7 +4,7 @@ Relacyjna baza danych to model przechowywania danych, w którym dane te zorganiz
 
 W praktyce można myśleć o bazie danych jak o zbiorze tabel. Aby dostać się do pojedynczej informacji należy określić nazwę tabeli, nazwę kolumny oraz tzw. klucz główny.
 
-![[Pasted image 20231107175529.png]]
+![[table.png]]
 
 
 **Structured Query Language - ustrukturyzowany język zapytań**
