Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -1,5 +1,5 @@
 ### 2.1 Wstęp do baz danych i podstawy SQL
-#### 2.1.1 Czym jest baza danych?
+### Czym jest baza danych?
 Relacyjna baza danych to model przechowywania danych, w którym dane te zorganizowane są w tabelach (zwanych również relacjami). Tabele posiadają wiersze i kolumny. Wiersze reprezentują rekordy (obserwacje) przechowywane w bazie, a kolumny odnoszą się do ich cech (atrybutów).
 
 W praktyce można myśleć o bazie danych jak o zbiorze tabel. Aby dostać się do pojedynczej informacji należy określić nazwę tabeli, nazwę kolumny oraz tzw. klucz główny.
@@ -36,6 +36,8 @@ CREATE TABLE cars (
 ```
 
 Jego kluczowym elementem jest zdefiniowanie poszczególnych kolumn poprzez podanie ich nazwy oraz typu danych.
+
+
 ---
 ---
 ---
