Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -19,7 +19,7 @@ Do wykonywania operacji na relacyjnej bazie danych służy język SQL. Kod SQLa 
 - DROP - do usuwania tabel / baz danych
 
 
-#### **CREATE**
+### **CREATE**
 
 To zapytanie służy do tworzenia tabel. Poniższy kod posłuży do stworzenia tabeli przechowującej informacje o samochodach.
 
@@ -37,6 +37,27 @@ CREATE TABLE cars (
 
 Jego kluczowym elementem jest zdefiniowanie poszczególnych kolumn poprzez podanie ich nazwy oraz typu danych.
 
+
+### **INSERT** 
+
+Tym zapytanie dodajemy dane do tabeli a dokładnie to tworzymy nowy wiersz. Możemy, ale nie musimy określać wartości dla każdej kolumny. Jeśli chcemy dodać kompletny wiersz robimy to w taki sposób:
+
+```sql
+INSERT INTO cars
+VALUES (1, 'Audi', 80000, 'Benzyna', 200000, True, '2015-09-12');
+```
+
+A jeśli tylko dla wybranych kolumn:
+```sql
+INSERT INTO cars (brand, price)
+VALUES ('Volvo', 90000);
+```
+
+Wówczas wartości w pozostałych kolumnach będą puste (NULL).
+
+### **SELECT**
+
+Jest to prawdopodobnie najczęściej używane zapytanie w języku SQL. Służy do wyciągania danych z bazy.
 
 ---
 ---
