Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -21,7 +21,7 @@ Do wykonywania operacji na relacyjnej bazie danych służy język SQL. Kod SQLa 
 
 ### **CREATE**
 
-To zapytanie służy do tworzenia tabel. Poniższy kod posłuży do stworzenia tabeli przechowującej informacje o samochodach.
+To zapytanie służy do tworzenia tabel. Poniższy kod utworzy tabelę przechowującą informacje o samochodach.
 
 ``` SQL
 CREATE TABLE cars (
@@ -40,7 +40,7 @@ Jego kluczowym elementem jest zdefiniowanie poszczególnych kolumn poprzez podan
 
 ### **INSERT** 
 
-Tym zapytanie dodajemy dane do tabeli a dokładnie to tworzymy nowy wiersz. Możemy, ale nie musimy określać wartości dla każdej kolumny. Jeśli chcemy dodać kompletny wiersz robimy to w taki sposób:
+Tym zapytanie dodajemy dane do tabeli, a ściślej – tworzymy nowy wiersz. Możemy, ale nie musimy określać wartości dla każdej kolumny. Jeśli chcemy dodać kompletny wiersz, robimy to w taki sposób:
 
 ```sql
 INSERT INTO cars
@@ -58,6 +58,53 @@ Wówczas wartości w pozostałych kolumnach będą puste (NULL).
 ### **SELECT**
 
 Jest to prawdopodobnie najczęściej używane zapytanie w języku SQL. Służy do wyciągania danych z bazy.
+
+**Przykłady zapytań typu SELECT**
+
+``` SQL
+SELECT * FROM cars; 
+
+SELECT brand, price, mileage FROM cars; 
+
+SELECT * FROM cars
+WHERE price > 50000 and is_new='False';
+
+SELECT * FROM cars
+WHERE price > 50000
+ORDER BY mileage;
+```
+
+
+### UPDATE
+W celu zmodyfikowania już istniejącej w tabeli wartości, korzystamy z zapytania UPDATE.
+
+```SQL
+UPDATE cars SET brand = 'Opel' WHERE mileage > 150000;
+```
+
+Jeśli nie określimy warunku, zmodyfikowana zostanie cała kolumna.
+
+```SQL
+UPDATE cars SET (mileage, is_new) = (1000, 'False') WHERE id = 4;
+```
+
+### DELETE
+DELETE służy do usunięcia rekordów z tabeli.
+
+```SQL
+DELETE FROM cars WHERE is_new = False
+```
+
+Tutaj również należy określić warunek, w innym wypadku usunięte zostaną wszystkie wiersze.
+
+### DROP
+
+DROP Służy do usuwania calej tabeli albo bazy danych.
+
+```SQL
+DROP TABLE cars
+```
+
 
 ---
 ---
