Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -99,7 +99,7 @@ Tutaj również należy określić warunek, w innym wypadku usunięte zostaną w
 
 ### DROP
 
-DROP Służy do usuwania calej tabeli albo bazy danych.
+DROP służy do usuwania calej tabeli albo bazy danych.
 
 ```SQL
 DROP TABLE cars
