Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -106,11 +106,98 @@ DROP TABLE cars
 ```
 
 
+
 ---
 ---
 ---
 &nbsp;
 ### 2.2 PostgreSQL + Python
+Aby połączyć się w Pythonie z bazą danych PostgreSQL i wykonywać na niej operacje, należy zaimportować bibliotekę `psycopg2` a następnie utworzyć obiekt typu `connection`:
+
+```python
+import psycopg2
+
+dbname = "postgres"
+user = "postgres"
+password = "postgres"
+host = "localhots"
+port = 5432
+
+conn = psycopg2.connect(dbname=dbname, user=user, password=password, host=host, port=port)
+```
+
+Następnie wykorzystując połączenie tworzymy kursor:
+
+```python
+cursor = conn.cursor()
+```
+
+W tym miejscu następują operacje na bazie danych, po których możemy zamknąć połączenie i kursor:
+
+```python
+conn.close()
+cursor.close()
+```
+
+
+---
+
+Aby wykonać operacje, które tworzą lub modyfikują dane w bazie, takie jak m.in.:
+- CREATE
+- INSERT
+- UPDATE
+- DELETE
+- DROP
+
+używamy następującego schematu:
+
+
+1. Stworzenie połączenia oraz kursora
+```python
+conn = psycopg2.connect(dbname=dbname, user=user, password=password, host=host, port=port)
+cursor = conn.cursor()
+```
+
+2. Wykonanie zapytania (`execute` + `commit`)
+```python
+create_query = '''
+CREATE TABLE cars (
+    id          SMALLINT, 
+    brand       VARCHAR(20),
+    price       NUMERIC,    
+    fuel_type   TEXT,     
+    mileage     NUMERIC,
+    is_new      BOOLEAN,  
+    prod_date   DATE   
+);
+'''
+
+cursor.execute(create_query)
+conn.commit()
+```
+
+3. Zamknięcie połączenia i kursora
+
+```python
+conn.close()
+cursor.close()
+```
+
+W celu wykonania zapytania typu SELECT, które wyciąga dane z bazy, należy zmodyfikować punkt 2 powyższego schematu:
+
+```python
+select_query = "SELECT * FROM cars"
+
+cursor.execute(select_query)
+results = cursor.fetchall()
+```
+
+Zamiast commitować wykonaną operację, pobieramy jej wynik (`fetchall`), który przechwytujemy w postaci listy tupli. Każdej tupli w liście odpowiada pojedynczy wiersz tabeli.
+
+---
+
+
+
 
 ---
 ---
