Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -120,7 +120,7 @@ import psycopg2
 dbname = "postgres"
 user = "postgres"
 password = "postgres"
-host = "localhots"
+host = "localhost"
 port = 5432
 
 conn = psycopg2.connect(dbname=dbname, user=user, password=password, host=host, port=port)
@@ -198,12 +198,62 @@ Zamiast commitować wykonaną operację, pobieramy jej wynik (`fetchall`), któr
 
 
 
-
 ---
 ---
 ---
 &nbsp;
 ### 2.3 SQLAlchemy
+Innym podejściem do manipulacji danymi w bazie danych, zamiast korzystania bezpośrednio z zapytań SQL, jest wykorzystanie narzędzi takich jak ORM (*Object Relational Mapping*). ORM pozwala dokonać mapowania między tabelami w bazie (relacjami) a odpowiadającymi im klasami. Dzięki temu możemy wykonywać operacje na obiektach a zmiany będą widoczne w bazie danych.
+
+W Pythonie najpopularniejszym narzędziem typu ORM jest SQLAlchemy.
+
+### Tworzenie tabeli
+
+Aby utworzyć tabelę, należy zacząć od definicji klasy, której ta tabela odpowiada:
+
+```python
+from sqlalchemy import create_engine, Column, String, Integer
+from sqlalchemy.orm import sessionmaker, declarative_base
+
+Base = declarative_base()
+
+class Person(Base):
+    __tablename__ = "people"
+    
+    id_number = Column("id_number", Integer, primary_key=True)
+    first_name = Column("first_name", String)
+    last_name = Column("last_name", String)
+    gender = Column("gender", String)
+    age = Column("age", Integer)
+    
+    def __init__(self, id_number, first_name, last_name, gender, age):
+        self.id_number = id_number
+        self.first_name = first_name
+        self.last_name = last_name
+        self.gender = gender
+        self.age = age
+        
+    def __repr__(self):
+        return f"Person with id: {self.id_number}"
+```
+
+Nazwa tabeli oraz definicje kolumn znajdują się przed metodą `__init__`, natomiast w samym inicie następuje inicjalizacja pojedynczego obiektu (rekordu) klasy (tabeli).
+
+Aby nawiązać połączenie z bazą, tworzymy obiekt typu `Engine` za pomocą funkcji `create_engine`. Przekazujemy do niej tzw. *connection string*, czyli specjalnie sformatowany ciąg znaków zawierający wszystkie informacje niezbędne do ustanowienia połączenia. 
+
+```python
+engine = create_engine("postgresql://postgres:postgres@localhost:5432/postgres")
+```
+
+Następnie mapujemy wszystkie utworzone klasy na relacje.
+
+```python
+Base.metadata.create_all(bind=engine)
+```
+
+### Dodawanie rekordów
+....
+
 
 ---
 ---
