Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -252,7 +252,74 @@ Base.metadata.create_all(bind=engine)
 ```
 
 ### Dodawanie rekordów
-....
+
+Przed dodaniem nowego wiersza do tabeli, konieczne jest stworzenie odpowiadającego mu obiektu
+
+```python
+p1 = Person(1, "Jan", "Kowalski", "M", 20)
+```
+
+a następnie inicjacja sesji (połączenia) z bazą danych, aby móc dodać rekord do tabeli.
+
+```python
+Session = sessionmaker(bind=engine)
+session = Session()
+
+session.add(p1)
+session.commit()
+```
+
+Analogicznie możemy dodawać kolejne rekordy:
+```python
+p2 = Person(2, "Anna", "Nowak", "K", 25)
+
+session.add(p2)
+session.commit()
+```
+
+### Pobieranie danych
+
+Pobieranie danych z bazy (zapytanie SELECT) odbywa się poprzez wywołanie metody `query` na obiekcie `session`:
+
+```python
+results = session.query(Person).all()
+```
+
+Przechwycona w ten sposób wartość jest listą instancji klasy `Person`. Możemy również dodać filtrowanie (klauzula WHERE) oraz inne klauzule używane w SQL.
+
+```python
+results = session.query(Person).filter(Person.gender == "K").all()
+
+
+from sqlalchemy import or_, and_
+
+results = session.query(Person).filter(or_(Person.gender == "K", Person.gender == "M")).all()
+results = session.query(Person).filter(and_(Person.gender == "K", Person.first_name == "Anna")).all()
+
+```
+
+### Pozostałe operacje
+
+Możemy wykonywać również operacje analogiczne do pozostałych zapytań, np.:
+
+UPDATE
+```python
+result = session.query(Person).filter(Person.id_number == 123).first()
+result.age = 22
+session.commit()
+```
+
+DELETE
+```python
+result = session.query(Person).filter(Person.id_number == 123).first()
+session.delete(result)
+session.commit()
+```
+
+DROP
+```python
+Person.__table__.drop(bind=engine)
+```
 
 
 ---
