Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -300,7 +300,7 @@ results = session.query(Person).filter(and_(Person.gender == "K", Person.first_n
 
 ### Pozostałe operacje
 
-Możemy wykonywać również operacje analogiczne do pozostałych zapytań, np.:
+Możemy wykonywać także operacje analogiczne do pozostałych zapytań, np.:
 
 UPDATE
 ```python
@@ -327,6 +327,39 @@ Person.__table__.drop(bind=engine)
 ---
 &nbsp;
 ### 2.4 MongoDB
+Oprócz relacyjnych baz danych, istnieją również bazy nierelacyjne. Należy do nich m.in. MongoDB. Jest to baza dokumentowa, która opiera się na kolekcjach dokumentów, czyli obiektów analogicznych do słowników w Pythonie. Operacje na takiej bazie przypominają działania na strukturach typu JSON.
+
+Zaczynamy od importu `pymongo` i nawiązania połączenia z localhostem. Domyślny port MongoDB to 27017.
+
+```python
+from pymongo import MongoClient
+
+client = MongoClient("localhost", 27017)
+```
+
+**Stworzenie nowej bazy danych oraz kolekcji**
+
+Kolekcja jest odpowiednikiem tabeli z modelu relacyjnego.
+
+```python
+db = client['my_db']
+collection = db['my_collection']
+```
+
+**Dodanie danych do kolekcji**
+
+```python
+document = {"id_number": 1, "first_name": "Jan", "last_name": "Kowalski", "gender": "M", "age": 20}
+
+collection.insert_one(document)
+
+
+document = {"id_number": 2,"first_name": "Anna", "last_name": "Nowak", "gender": "K", "age": 25}
+
+collection.insert_one(document)
+```
+
+
 
 ---
 ---
