Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -360,6 +360,35 @@ collection.insert_one(document)
 ```
 
 
+**Pobieranie danych**
+
+Dane w postaci obiektu klasy `pymongo.cursor.Cursor`:
+```python
+results = collection.find()
+```
+
+Obiekt ten jest iteratorem. Jeśli istnieje potrzeba zamiany go na listę, należy dokonać rzutowania:
+```python
+results = list(results)
+```
+
+**Pozostałe operacje**
+Update:
+```python
+collection.update_one({'id_number': 2}, {"$set": {"age": 30}})
+```
+
+Delete:
+```python
+collection.delete_one({"id_number": 1})
+```
+
+Drop:
+```python
+collection.drop()
+```
+
+
 
 ---
 ---
