Just another update

--- a/Python średnio zaawansowany/2. Bazy danych.md
+++ b/Python średnio zaawansowany/2. Bazy danych.md
@@ -327,7 +327,7 @@ Person.__table__.drop(bind=engine)
 ---
 &nbsp;
 ### 2.4 MongoDB
-Oprócz relacyjnych baz danych, istnieją również bazy nierelacyjne. Należy do nich m.in. MongoDB. Jest to baza dokumentowa, która opiera się na kolekcjach dokumentów, czyli obiektów analogicznych do słowników w Pythonie. Operacje na takiej bazie przypominają działania na strukturach typu JSON.
+Oprócz relacyjnych baz danych, istnieją również bazy nierelacyjne. Należy do nich m.in. MongoDB. Jest to baza dokumentowa, która opiera się na kolekcjach dokumentów, czyli obiektów przypominających słowniki w Pythonie. Operacje na takiej bazie są podobne do działań na strukturach typu JSON.
 
 Zaczynamy od importu `pymongo` i nawiązania połączenia z localhostem. Domyślny port MongoDB to 27017.
 
@@ -362,7 +362,7 @@ collection.insert_one(document)
 
 **Pobieranie danych**
 
-Dane w postaci obiektu klasy `pymongo.cursor.Cursor`:
+Dane można pobrać w postaci obiektu klasy `pymongo.cursor.Cursor`:
 ```python
 results = collection.find()
 ```
