Just another update

--- a/Python średnio zaawansowany/3. Protokół HTTP.md
+++ b/Python średnio zaawansowany/3. Protokół HTTP.md
@@ -1,7 +1,7 @@
 ### 3.1 HTML
-Punktem wyjścia do zrozumienia wielu tematów związanych z wykorzystaniem protokołu HTTP (*HyperText Transfer Protocl*) jest podstawowa znajomość języka HTML (*HyperText Markup Language*). Szczególnie istotne jest to podczas web scrapingu, czyli procesu pozyskiwania danych znajdujących się na stronach www.
+Punktem wyjścia do zrozumienia wielu tematów związanych z wykorzystaniem protokołu HTTP (*HyperText Transfer Protocol*) jest podstawowa znajomość języka HTML (*HyperText Markup Language*). Szczególnie istotne jest to podczas web scrapingu, czyli procesu pozyskiwania danych znajdujących się na stronach www.
 
-HTML to język znaczników, który definiuje zawartość strony internetowej. W różnych znacznikach (ang. *tags*) znajdują się poszczególne elementy widoczne na stronie, takie jak np. paragrafy tekstu, linki, tabele, nagłówki itd. Poniżej znajduje się przykładowy kod HTML, który opisuje strukturę bardzo prostej strony internetowej. Właściwa zawartość strony (to, co widzimy w przeglądarce) znajduje się w znaczniku `<body> </body>`. Są w nim zagnieżdżone kolejne tagi – w tym przypadku jeden: `<div> </div>`. Cała reszta to metadane.
+HTML to język znaczników, który definiuje zawartość strony internetowej. W różnych znacznikach (ang. *tags*) znajdują się poszczególne elementy widoczne na stronie, takie jak np. paragrafy tekstu, linki, tabele, nagłówki itd. Poniżej zamieszczony został przykładowy kod HTML, który opisuje strukturę bardzo prostej strony internetowej. Właściwa zawartość strony (to, co widzimy w przeglądarce) znajduje się wewnątrz znacznika `<body> </body>`. Są w nim zagnieżdżone kolejne tagi – w tym przypadku jeden: `<div> </div>`. Cała reszta to metadane.
 
 ```html
 <!DOCTYPE html>
@@ -17,7 +17,7 @@ HTML to język znaczników, który definiuje zawartość strony internetowej. W 
 </html>
 ```
 
-Wszystkie co znajduje się pomiędzy symbolami `<...>` a `</...>` stanowi zawartość danego znacznika. Może być tam umieszczony tekst, lub głębiej zagnieżdżone tagi. Struktura ich zagnieżdżeń może być bardzo złożona.
+Wszystko, co znajduje się pomiędzy symbolami `<...>` a `</...>` stanowi zawartość danego znacznika. Może być tam umieszczony tekst lub głębiej zagnieżdżone tagi. Struktura takich zagnieżdżeń może być bardzo złożona.
 
 Poniżej znajduje się opis kilku najczęściej spotykanych znaczników HTMLa. 
 
